✨ feat(Upload): 组件禁用状态下可点击下载文件

--- a/packages/xgen/components/edit/Upload/index.less
+++ b/packages/xgen/components/edit/Upload/index.less
@@ -60,7 +60,12 @@
 						.xgen-upload-list-item-info {
 							padding: 0 9px;
 							border-radius: 6px;
+
+							.xgen-upload-list-item-name {
+								pointer-events: all;
+							}
 						}
+						
 					}
 				}
 
